--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 29
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "endroad.photoquest"
-        minSdkVersion 11
-        targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 21
+        targetSdkVersion 29
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:7.3.0'
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+	implementation 'com.google.android.gms:play-services:12.0.1'
+	implementation 'androidx.appcompat:appcompat:1.1.0'
 }
