--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	implementation 'com.google.android.gms:play-services:12.0.1'
 	implementation 'androidx.appcompat:appcompat:1.1.0'
-	implementation "androidx.core:core-ktx:+"
+	implementation "androidx.core:core-ktx:1.1.0"
+	implementation "ru.endroad:arena:2.1.5"
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+	implementation "androidx.constraintlayout:constraintlayout:1.1.3" //TODO необходимость constraint банально от модуля арены
 }
 repositories {
 	mavenCentral()
