--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation "ru.endroad:arena:2.1.5"
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	implementation "androidx.constraintlayout:constraintlayout:1.1.3" //TODO необходимость constraint банально от модуля арены
+	implementation project(':panorama-view')
 }
 repositories {
 	mavenCentral()
