--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 	implementation "androidx.constraintlayout:constraintlayout:1.1.3" //TODO необходимость constraint банально от модуля арены
 	implementation project(':panorama-view')
+	implementation "ru.endroad.camp:fragment-navigation:1.0.0"
 }
 repositories {
 	mavenCentral()
