--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,57 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="endroad.photoquest"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	xmlns:tools="http://schemas.android.com/tools"
+	package="endroad.photoquest">
 
-    <uses-sdk android:targetSdkVersion="21" />
+	<uses-feature
+		android:glEsVersion="0x00020000"
+		android:required="true"></uses-feature>
 
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true" >
-    </uses-feature>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission
+		android:name="android.permission.READ_EXTERNAL_STORAGE"
+		android:maxSdkVersion="18" />
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+	<application
+		android:allowBackup="true"
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name"
+		android:theme="@style/MyTheme"
+		tools:ignore="GoogleAppIndexingWarning">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/MyTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".places.ListPlacesActivity" />
-        <activity android:name=".Quest.ListQuest" />
-        <activity android:name=".places.panoram.PointActivityGLES" />
-        <activity android:name=".Quest.QuestActivity" />
-        <activity android:name=".Quest.QuestTaskGPS" />
+		<activity
+			android:name=".application.SingleActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+
+		<activity android:name=".places.ListPlacesActivity" />
+		<activity android:name=".Quest.ListQuest" />
+		<activity android:name=".places.panoram.PointActivityGLES" />
+		<activity android:name=".Quest.QuestActivity" />
+		<activity android:name=".Quest.QuestTaskGPS" />
 
 		<meta-data
-            android:name="com.google.android.gms.games.APP_ID"
-            android:value="@string/app_id" />
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCXWgLzGi1gA7lLajFzoGz8NUEpLx3TiSk" />
+			android:name="com.google.android.gms.games.APP_ID"
+			android:value="@string/app_id" />
+		<meta-data
+			android:name="com.google.android.maps.v2.API_KEY"
+			android:value="AIzaSyCXWgLzGi1gA7lLajFzoGz8NUEpLx3TiSk" />
 
-    </application>
+	</application>
 
 </manifest>
