--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
 	compileSdkVersion 29
-	buildToolsVersion "21.1.2"
+	buildToolsVersion "29.0.2"
 
 	defaultConfig {
 		applicationId "endroad.photoquest"
@@ -31,6 +31,11 @@ dependencies {
 	implementation "androidx.constraintlayout:constraintlayout:1.1.3" //TODO необходимость constraint банально от модуля арены
 	implementation project(':panorama-view')
 	implementation "ru.endroad.camp:fragment-navigation:1.0.0"
+
+	implementation 'com.mikepenz:fastadapter:4.1.1'
+	implementation "org.koin:koin-core:2.0.0-rc-2"
+	implementation "org.koin:koin-core-ext:2.0.0-rc-2"
+	implementation "org.koin:koin-androidx-viewmodel:2.0.0-rc-2"
 }
 repositories {
 	mavenCentral()
