--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
 	compileSdkVersion 29
-	buildToolsVersion "29.0.2"
+	buildToolsVersion "29.0.3"
 
 	defaultConfig {
 		applicationId "endroad.photoquest"
@@ -19,23 +19,27 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
 	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
+	kotlinOptions {
+		jvmTarget = '1.8'
+	}
 }
 
 dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
-	implementation 'com.google.android.gms:play-services:12.0.1'
-	implementation 'androidx.appcompat:appcompat:1.1.0'
-	implementation "androidx.core:core-ktx:1.1.0"
-	implementation "ru.endroad:arena:2.1.5"
+	implementation 'androidx.appcompat:appcompat:1.2.0'
+	implementation "androidx.core:core-ktx:1.3.2"
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-	implementation "androidx.constraintlayout:constraintlayout:1.1.3" //TODO необходимость constraint банально от модуля арены
 	implementation project(':panorama-view')
-	implementation "ru.endroad.camp:fragment-navigation:1.0.0"
 
 	implementation 'com.mikepenz:fastadapter:4.1.1'
-	implementation "org.koin:koin-core:2.0.0-rc-2"
-	implementation "org.koin:koin-core-ext:2.0.0-rc-2"
-	implementation "org.koin:koin-androidx-viewmodel:2.0.0-rc-2"
+	implementation "org.koin:koin-core:2.1.5"
+	implementation "org.koin:koin-core-ext:2.1.5"
+	implementation "org.koin:koin-androidx-viewmodel:2.1.5"
+	implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
 repositories {
 	mavenCentral()
